--- a/kubejs/assets/ftbquestlocalizer/lang/lzh.json
+++ b/kubejs/assets/ftbquestlocalizer/lang/lzh.json
@@ -1,23 +1,23 @@
 {
-  "ftbquests.chapter.adventures_in_abydos.quest1.description1": "希望沙粒冇入到你啲機器度。",
-  "ftbquests.chapter.adventures_in_abydos.quest1.subtitle": "離家又更進一步……",
-  "ftbquests.chapter.adventures_in_abydos.quest1.task_96379769826637653.title": "一個新世界！",
-  "ftbquests.chapter.adventures_in_abydos.quest10.description1": "合成所有§4極高壓§r零件嘅核心部分。",
-  "ftbquests.chapter.adventures_in_abydos.quest19.description1": "一個可以喺瓦礫中尋寶嘅新機器。",
-  "ftbquests.chapter.adventures_in_abydos.quest19.title": "第一個§4§o終極§r多方塊結構",
-  "ftbquests.chapter.adventures_in_abydos.quest2.description1": "一個可以調節機關嘅小型電腦。",
-  "ftbquests.chapter.adventures_in_abydos.quest20.description1": "呢個機器將一個液體同兩種催化劑混合，將佢活化。",
-  "ftbquests.chapter.adventures_in_abydos.quest21.description1": "利用呢兩個機器，你可以大大增加你產生嘅鐀。",
-  "ftbquests.chapter.adventures_in_abydos.quest21.title": "更多§4§o終極§r多方塊結構",
-  "ftbquests.chapter.adventures_in_abydos.quest22.description1": "一種奇怪而具有另佢成爲更多更高級嘅機器中必須嘅有趣特性嘅流體。",
-  "ftbquests.chapter.adventures_in_abydos.quest22.title": "烏托邦鐀",
-  "ftbquests.chapter.adventures_in_abydos.quest23.description1": "輸入細菌，可以使佢哋繁殖，增加數量並獲得變異嘅複製品，令你可以獲得同你搵緊完全一致嘅物品生產率。更高嘅變異率代表產出嘅物品有更高嘅差異。",
-  "ftbquests.chapter.adventures_in_abydos.quest24.description1": "呢個係你可以提煉細菌以獲得你想要嘅資源嘅方法",
-  "ftbquests.chapter.adventures_in_abydos.quest25.description1": "呢個機器可以做到三樣嘢。",
-  "ftbquests.chapter.adventures_in_abydos.quest25.description2": "1. 將沉睡中嘅細菌重新啓動，另佢可供使用",
-  "ftbquests.chapter.adventures_in_abydos.quest25.description3": "2. 使細菌變異，另佢可以生產新嘅液體",
-  "ftbquests.chapter.adventures_in_abydos.quest25.description4": "3. 另細菌變異，另佢變成一種新嘅細菌",
-  "ftbquests.chapter.adventures_in_abydos.quest25.description5": "利用以上資訊同埋繁殖器嘅資訊，你應該可以獲得你希望獲得嘅細菌。",
+  "ftbquests.chapter.adventures_in_abydos.quest1.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest1.subtitle": "",
+  "ftbquests.chapter.adventures_in_abydos.quest1.task_96379769826637653.title": "",
+  "ftbquests.chapter.adventures_in_abydos.quest10.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest19.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest19.title": "",
+  "ftbquests.chapter.adventures_in_abydos.quest2.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest20.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest21.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest21.title": "",
+  "ftbquests.chapter.adventures_in_abydos.quest22.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest22.title": "",
+  "ftbquests.chapter.adventures_in_abydos.quest23.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest24.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest25.description1": "",
+  "ftbquests.chapter.adventures_in_abydos.quest25.description2": "",
+  "ftbquests.chapter.adventures_in_abydos.quest25.description3": "",
+  "ftbquests.chapter.adventures_in_abydos.quest25.description4": "",
+  "ftbquests.chapter.adventures_in_abydos.quest25.description5": "",
   "ftbquests.chapter.adventures_in_abydos.quest26.description1": "",
   "ftbquests.chapter.adventures_in_abydos.quest26.description2": "",
   "ftbquests.chapter.adventures_in_abydos.quest26.task_6041102318790691484.title": "",
@@ -504,66 +504,66 @@
   "ftbquests.chapter.draconic_age_part_1.quest84.title": "",
   "ftbquests.chapter.draconic_age_part_1.quest9.description1": "",
   "ftbquests.chapter.draconic_age_part_1.title": "",
-  "ftbquests.chapter.early_game.quest1.description1": "任何空島生存模組包嘅開始，唔講都應該知道。",
-  "ftbquests.chapter.early_game.quest1.title": "斬樹",
-  "ftbquests.chapter.early_game.quest10.description1": "喺用晒呢個咁珍貴嘅資源之前，建議製造更多泥土。",
-  "ftbquests.chapter.early_game.quest10.title": "泥巴過濾 ",
-  "ftbquests.chapter.early_game.quest11.description1": "加入線網，基本資源應有盡有。 ",
-  "ftbquests.chapter.early_game.quest11.title": "盈資累日",
-  "ftbquests.chapter.early_game.quest12.description1": "將所有零件合成，你終於獲得你第一個§7低壓§r電路！為咗§7低壓§r機器，整多幾個會係一個好主意。",
-  "ftbquests.chapter.early_game.quest13.description1": "每一個§7低壓§r電器嘅核心。",
-  "ftbquests.chapter.early_game.quest13.title": "§7低壓§r機箱",
-  "ftbquests.chapter.early_game.quest14.description1": "你嘅第一個超導體！",
-  "ftbquests.chapter.early_game.quest14.description2": "超導體喺導電期間唔會失去任何電力。喺任何時候，都應該使用。",
-  "ftbquests.chapter.early_game.quest14.title": "浸魂錠電線",
-  "ftbquests.chapter.early_game.quest15.description1": "機械動力嘅代表性合金。而家仲有埋更好嘅合成比例！",
-  "ftbquests.chapter.early_game.quest16.description1": "仲因為需要兩個錠先可以合成到一塊板而煩惱？動力衝壓機令你可以喺早期以一半嘅材料料製造板！",
-  "ftbquests.chapter.early_game.quest16.title": "批量衝壓",
-  "ftbquests.chapter.early_game.quest17.description1": "由§l叢林樹§r提煉乳膠，然後加工，會係你嘅第一個橡膠嘅來源",
-  "ftbquests.chapter.early_game.quest17.description2": "你有兩種方法獲得乳膠。你可以用喺叢林樹嘅周圍放置§n樹汁提取器§r，或者整§n乳膠農場§n多方塊結構。",
-  "ftbquests.chapter.early_game.quest17.description3": "將橡膠同埋硫磺粉混合埋一齊，可以得到硫化橡膠。",
-  "ftbquests.chapter.early_game.quest17.description4": "- 你可以用加熱咗嘅動力加工器。",
-  "ftbquests.chapter.early_game.quest17.description5": "- 你可以用蒸汽合金爐。",
-  "ftbquests.chapter.early_game.quest17.description6": "- 你可以用底下擺放咗營火嘅煮食爐。",
-  "ftbquests.chapter.early_game.quest17.description7": "§n提示§r：乳膠農場要用到木螺絲以收集乳膠。如果要用到利用燃料同電路而更好嘅提取方法，需要用到§8極低壓§r或以上輸入總線。如要自動收集乳膠，可於多方塊結構後面擺放輸出倉口。  ",
-  "ftbquests.chapter.early_game.quest17.title": "乳膠提煉",
-  "ftbquests.chapter.early_game.quest18.description1": "每個GregTech大師都需要準備好佢嘅工具腰帶，先可以整到佢哋一開始嘅機器。我哋建議用鐵或者鍛鐵整你嘅工具，或者睇下商店嘅起始工具。",
-  "ftbquests.chapter.early_game.quest18.task_1272510792796047959.title": "任何GregTech鋸頭",
-  "ftbquests.chapter.early_game.quest18.task_1579826480616765420.title": "任何GregTech錘頭",
-  "ftbquests.chapter.early_game.quest18.task_5115332318641010646.title": "任何GregTech剪線鉗",
-  "ftbquests.chapter.early_game.quest18.task_553225746540863782.title": "任何GregTech螺絲批",
-  "ftbquests.chapter.early_game.quest18.task_5563755656614757383.title": "任何GregTech士巴拿",
-  "ftbquests.chapter.early_game.quest18.task_7801137332843278482.title": "任何GregTech螺絲刀",
-  "ftbquests.chapter.early_game.quest18.task_845632090524168831.title": "任何GregTech軟錘",
-  "ftbquests.chapter.early_game.quest18.task_8796685572614558468.title": "任何GregTech刀",
-  "ftbquests.chapter.early_game.quest18.task_9020257701177319558.title": "任何GregTech研鉢",
-  "ftbquests.chapter.early_game.quest18.title": "萬用工具",
-  "ftbquests.chapter.early_game.quest19.description1": "使用營火或火爐，燒製鍛鐵。",
-  "ftbquests.chapter.early_game.quest19.title": "鐵塊鍛燒",
-  "ftbquests.chapter.early_game.quest2.description1": "能源轉換器係傳送電力中必要嘅方塊。利用佢哋可以將EU同FE/RE以§a4 FE/RF§r比§61 EU§r嘅比例轉換電力。切記《星際科技》中EU自動轉換已被停用。",
-  "ftbquests.chapter.early_game.quest2.task_4822295913099746991.title": "任何§7低壓§r電力轉換器",
-  "ftbquests.chapter.early_game.quest2.title": "偉大嘅工業革命",
-  "ftbquests.chapter.early_game.quest20.description1": "加熱電力加工器，可以開始製造你嘅頭幾隻合金。",
-  "ftbquests.chapter.early_game.quest20.title": "混製合金",
-  "ftbquests.chapter.early_game.quest21.description1": "橡膠係一個用於絕緣電線嘅仲要材料。",
-  "ftbquests.chapter.early_game.quest21.title": "電線絕緣",
-  "ftbquests.chapter.early_game.quest22.description1": "無中生有嘅木桶物料轉化已被停用，並被呢個極好用嘅機器取代！",
-  "ftbquests.chapter.early_game.quest22.description2": "佢可以沉浸、堆肥同轉化物料。",
-  "ftbquests.chapter.early_game.quest22.description3": "只要記住喺機器頁面嘅左邊選擇正確嘅§7§o§n機器運行模式§r。\n注意：此機器§l無需用電§r！",
-  "ftbquests.chapter.early_game.quest22.title": "木桶轉化",
-  "ftbquests.chapter.early_game.quest23.description1": "你嘅第一個多方塊結構！",
-  "ftbquests.chapter.early_game.quest23.description2": "呢部機器會幫你以較慢嘅速度製造鋼鐵。你無法另佢自動運作，但係喺不久嘅將來，會有更好嘅版本。",
-  "ftbquests.chapter.early_game.quest23.title": "原始鋼廠",
-  "ftbquests.chapter.early_game.quest24.description1": "極建議使用鍛鐵製造鋼鐵，因會減低配方所需運作時間一半以上。",
-  "ftbquests.chapter.early_game.quest24.title": "鋼鐵",
-  "ftbquests.chapter.early_game.quest25.description1": "你而家整到最珍貴嘅合金，需要極多以製作電路。",
-  "ftbquests.chapter.early_game.quest25.title": "紅色合金",
-  "ftbquests.chapter.early_game.quest26.description1": "使用史萊蘑孢子製造。",
-  "ftbquests.chapter.early_game.quest26.title": "史萊姆及樹脂",
-  "ftbquests.chapter.early_game.quest27.description1": "只需忘記呢個電路板係用一塊木板同幾舊零件黐埋一齊而成嘅事實。",
-  "ftbquests.chapter.early_game.quest27.title": "電路板",
-  "ftbquests.chapter.early_game.quest28.description1": "每個電路都需要電阻器，防止過熱燒毀。",
-  "ftbquests.chapter.early_game.quest28.title": "電阻器",
+  "ftbquests.chapter.early_game.quest1.description1": "",
+  "ftbquests.chapter.early_game.quest1.title": "",
+  "ftbquests.chapter.early_game.quest10.description1": "",
+  "ftbquests.chapter.early_game.quest10.title": "",
+  "ftbquests.chapter.early_game.quest11.description1": "",
+  "ftbquests.chapter.early_game.quest11.title": "",
+  "ftbquests.chapter.early_game.quest12.description1": "",
+  "ftbquests.chapter.early_game.quest13.description1": "",
+  "ftbquests.chapter.early_game.quest13.title": "",
+  "ftbquests.chapter.early_game.quest14.description1": "",
+  "ftbquests.chapter.early_game.quest14.description2": "",
+  "ftbquests.chapter.early_game.quest14.title": "",
+  "ftbquests.chapter.early_game.quest15.description1": "",
+  "ftbquests.chapter.early_game.quest16.description1": "",
+  "ftbquests.chapter.early_game.quest16.title": "",
+  "ftbquests.chapter.early_game.quest17.description1": "",
+  "ftbquests.chapter.early_game.quest17.description2": "",
+  "ftbquests.chapter.early_game.quest17.description3": "",
+  "ftbquests.chapter.early_game.quest17.description4": "",
+  "ftbquests.chapter.early_game.quest17.description5": "",
+  "ftbquests.chapter.early_game.quest17.description6": "",
+  "ftbquests.chapter.early_game.quest17.description7": "",
+  "ftbquests.chapter.early_game.quest17.title": "",
+  "ftbquests.chapter.early_game.quest18.description1": "",
+  "ftbquests.chapter.early_game.quest18.task_1272510792796047959.title": "",
+  "ftbquests.chapter.early_game.quest18.task_1579826480616765420.title": "",
+  "ftbquests.chapter.early_game.quest18.task_5115332318641010646.title": "",
+  "ftbquests.chapter.early_game.quest18.task_553225746540863782.title": "",
+  "ftbquests.chapter.early_game.quest18.task_5563755656614757383.title": "",
+  "ftbquests.chapter.early_game.quest18.task_7801137332843278482.title": "",
+  "ftbquests.chapter.early_game.quest18.task_845632090524168831.title": "",
+  "ftbquests.chapter.early_game.quest18.task_8796685572614558468.title": "",
+  "ftbquests.chapter.early_game.quest18.task_9020257701177319558.title": "",
+  "ftbquests.chapter.early_game.quest18.title": "",
+  "ftbquests.chapter.early_game.quest19.description1": "",
+  "ftbquests.chapter.early_game.quest19.title": "",
+  "ftbquests.chapter.early_game.quest2.description1": "",
+  "ftbquests.chapter.early_game.quest2.task_4822295913099746991.title": "",
+  "ftbquests.chapter.early_game.quest2.title": "",
+  "ftbquests.chapter.early_game.quest20.description1": "",
+  "ftbquests.chapter.early_game.quest20.title": "",
+  "ftbquests.chapter.early_game.quest21.description1": "",
+  "ftbquests.chapter.early_game.quest21.title": "",
+  "ftbquests.chapter.early_game.quest22.description1": "",
+  "ftbquests.chapter.early_game.quest22.description2": "",
+  "ftbquests.chapter.early_game.quest22.description3": "",
+  "ftbquests.chapter.early_game.quest22.title": "",
+  "ftbquests.chapter.early_game.quest23.description1": "",
+  "ftbquests.chapter.early_game.quest23.description2": "",
+  "ftbquests.chapter.early_game.quest23.title": "",
+  "ftbquests.chapter.early_game.quest24.description1": "",
+  "ftbquests.chapter.early_game.quest24.title": "",
+  "ftbquests.chapter.early_game.quest25.description1": "",
+  "ftbquests.chapter.early_game.quest25.title": "",
+  "ftbquests.chapter.early_game.quest26.description1": "",
+  "ftbquests.chapter.early_game.quest26.title": "",
+  "ftbquests.chapter.early_game.quest27.description1": "",
+  "ftbquests.chapter.early_game.quest27.title": "",
+  "ftbquests.chapter.early_game.quest28.description1": "",
+  "ftbquests.chapter.early_game.quest28.title": "",
   "ftbquests.chapter.early_game.quest29.description1": "",
   "ftbquests.chapter.early_game.quest29.title": "",
   "ftbquests.chapter.early_game.quest3.description1": "",
@@ -1651,7 +1651,7 @@
   "ftbquests.chapter.welcome.quest9.description1": "",
   "ftbquests.chapter.welcome.quest9.title": "",
   "ftbquests.chapter.welcome.title": "",
-  "ftbquests.chapter_groups_2166166455659738615.title": "萬代精進（正常難度）",
-  "ftbquests.chapter_groups_283590540007709230.title": "進展追蹤",
-  "ftbquests.chapter_groups_2914502301761128229.title": "附加"
+  "ftbquests.chapter_groups_2166166455659738615.title": "",
+  "ftbquests.chapter_groups_283590540007709230.title": "",
+  "ftbquests.chapter_groups_2914502301761128229.title": ""
 }
