--- a/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
+++ b/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
@@ -552,8 +552,8 @@
   "ftbquests.chapter.early_game.quest22.description3": "只要記住喺機器頁面嘅左邊選擇正確嘅§7§o§n機器運行模式§r。\n注意：此機器§l無需用電§r！",
   "ftbquests.chapter.early_game.quest22.title": "木桶轉化",
   "ftbquests.chapter.early_game.quest23.description1": "你嘅第一個多方塊結構！",
-  "ftbquests.chapter.early_game.quest23.description2": "呢部機器會幫你以較慢嘅速度製造鋼鐵。你無法另佢自動運作，但係喺不久嘅將來，會有更好嘅版本。",
-  "ftbquests.chapter.early_game.quest23.title": "原始鋼廠",
+  "ftbquests.chapter.early_game.quest23.description2": "土高爐會幫你以較慢嘅速度製造鋼鐵。你無法另佢自動運作，但係喺不久嘅將來，會有更好嘅版本。",
+  "ftbquests.chapter.early_game.quest23.title": "古法初冶 ",
   "ftbquests.chapter.early_game.quest24.description1": "極建議使用鍛鐵製造鋼鐵，因會減低配方所需運作時間一半以上。",
   "ftbquests.chapter.early_game.quest24.title": "鋼鐵",
   "ftbquests.chapter.early_game.quest25.description1": "你而家整到最珍貴嘅合金，需要極多以製作電路。",
@@ -564,19 +564,19 @@
   "ftbquests.chapter.early_game.quest27.title": "電路板",
   "ftbquests.chapter.early_game.quest28.description1": "每個電路都需要電阻器，防止過熱燒毀。",
   "ftbquests.chapter.early_game.quest28.title": "電阻器",
-  "ftbquests.chapter.early_game.quest29.description1": "",
-  "ftbquests.chapter.early_game.quest29.title": "",
-  "ftbquests.chapter.early_game.quest3.description1": "",
-  "ftbquests.chapter.early_game.quest3.task_1303235380099471856.title": "",
-  "ftbquests.chapter.early_game.quest3.title": "",
-  "ftbquests.chapter.early_game.quest30.description1": "",
-  "ftbquests.chapter.early_game.quest30.title": "",
-  "ftbquests.chapter.early_game.quest31.description1": "",
-  "ftbquests.chapter.early_game.quest31.title": "",
-  "ftbquests.chapter.early_game.quest32.description1": "",
-  "ftbquests.chapter.early_game.quest32.title": "",
-  "ftbquests.chapter.early_game.quest33.description1": "",
-  "ftbquests.chapter.early_game.quest33.title": "",
+  "ftbquests.chapter.early_game.quest29.description1": "製造玻璃並非單純燒製沙而成。你需要將沙同礫石鑿碎，合成玻璃粉，然後喺營火上燒成。",
+  "ftbquests.chapter.early_game.quest29.title": "璃火祕藝",
+  "ftbquests.chapter.early_game.quest3.description1": "使用鉤子破壞樹葉，會掉下蠶蟲，用於樹葉可侵擾佢哋。稍等後，樹葉白化，用鉤子再破壞，即可製線。",
+  "ftbquests.chapter.early_game.quest3.task_1303235380099471856.title": "任何鉤子",
+  "ftbquests.chapter.early_game.quest3.title": "鉤葉竊絲 ",
+  "ftbquests.chapter.early_game.quest30.description1": "係時候將你嘅鋼鐵用得其所。喺得到車牀前唔建議整太多。",
+  "ftbquests.chapter.early_game.quest30.title": "真空管",
+  "ftbquests.chapter.early_game.quest31.description1": "將巫水同沙混合，可製得你嘅第一塊靈魂砂。你可以重複啱啱嘅步驟，或者將佢製成§3靈魂營火§r，以批量纏魂得更多靈魂砂及其他材料。",
+  "ftbquests.chapter.early_game.quest31.title": "靈魂砂",
+  "ftbquests.chapter.early_game.quest32.description1": "而家合金嘅數量，仲未算多。",
+  "ftbquests.chapter.early_game.quest32.title": "不變鋼",
+  "ftbquests.chapter.early_game.quest33.description1": "金可以製作機械動力嘅零件、機器，同埋幾種用於§7低壓§r嘅合金。",
+  "ftbquests.chapter.early_game.quest33.title": "金",
   "ftbquests.chapter.early_game.quest34.description1": "",
   "ftbquests.chapter.early_game.quest34.description2": "",
   "ftbquests.chapter.early_game.quest34.title": "",
