--- a/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
+++ b/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
@@ -504,21 +504,21 @@
   "ftbquests.chapter.draconic_age_part_1.quest84.title": "",
   "ftbquests.chapter.draconic_age_part_1.quest9.description1": "",
   "ftbquests.chapter.draconic_age_part_1.title": "",
-  "ftbquests.chapter.early_game.quest1.description1": "",
-  "ftbquests.chapter.early_game.quest1.title": "",
-  "ftbquests.chapter.early_game.quest10.description1": "",
-  "ftbquests.chapter.early_game.quest10.title": "",
-  "ftbquests.chapter.early_game.quest11.description1": "",
-  "ftbquests.chapter.early_game.quest11.title": "",
-  "ftbquests.chapter.early_game.quest12.description1": "",
-  "ftbquests.chapter.early_game.quest13.description1": "",
-  "ftbquests.chapter.early_game.quest13.title": "",
-  "ftbquests.chapter.early_game.quest14.description1": "",
-  "ftbquests.chapter.early_game.quest14.description2": "",
-  "ftbquests.chapter.early_game.quest14.title": "",
-  "ftbquests.chapter.early_game.quest15.description1": "",
-  "ftbquests.chapter.early_game.quest16.description1": "",
-  "ftbquests.chapter.early_game.quest16.title": "",
+  "ftbquests.chapter.early_game.quest1.description1": "所有空島生存模組包的開始。又有誰能想到了呢？",
+  "ftbquests.chapter.early_game.quest1.title": "砍伐樹木",
+  "ftbquests.chapter.early_game.quest10.description1": "我們建議在用盡你的一切泥土前，先製造更多。",
+  "ftbquests.chapter.early_game.quest10.title": "泥巴過濾",
+  "ftbquests.chapter.early_game.quest11.description1": "獲得線網，基本資源應有盡有。",
+  "ftbquests.chapter.early_game.quest11.title": "盈資累日",
+  "ftbquests.chapter.early_game.quest12.description1": "把所有零件合成，就能獲得你第一個§7低壓§r電路板！建議先多製造幾個電路板，以合成更多§7低壓§r機器。",
+  "ftbquests.chapter.early_game.quest13.description1": "所有§7低壓§r機器的核心。",
+  "ftbquests.chapter.early_game.quest13.title": "§7低壓§r機箱",
+  "ftbquests.chapter.early_game.quest14.description1": "你的第一個超導體！",
+  "ftbquests.chapter.early_game.quest14.description2": "超導體在傳送電力期間不會損失任何電力，不論距離。在所有情況下都應該使用。",
+  "ftbquests.chapter.early_game.quest14.title": "浸魂錠電線",
+  "ftbquests.chapter.early_game.quest15.description1": "機械動力的招牌合金。現在也有更好的合成比例！",
+  "ftbquests.chapter.early_game.quest16.description1": "還在為一板兩錠的合成比例而煩惱？有了動力沖壓機，就能以一比一的比例獲得前期的金屬板！",
+  "ftbquests.chapter.early_game.quest16.title": "批量沖壓",
   "ftbquests.chapter.early_game.quest17.description1": "",
   "ftbquests.chapter.early_game.quest17.description2": "",
   "ftbquests.chapter.early_game.quest17.description3": "",
@@ -1651,7 +1651,7 @@
   "ftbquests.chapter.welcome.quest9.description1": "",
   "ftbquests.chapter.welcome.quest9.title": "",
   "ftbquests.chapter.welcome.title": "",
-  "ftbquests.chapter_groups_2166166455659738615.title": "",
-  "ftbquests.chapter_groups_283590540007709230.title": "",
-  "ftbquests.chapter_groups_2914502301761128229.title": ""
+  "ftbquests.chapter_groups_2166166455659738615.title": "萬代精進（正常難度）",
+  "ftbquests.chapter_groups_283590540007709230.title": "進展追蹤",
+  "ftbquests.chapter_groups_2914502301761128229.title": "附加"
 }
