feat(zh_cn): complete misc translations
Complete translations for Create New Age, Create Diesel Generators,
MegaCells, Minecraft, SG Journey and XYCraft World in zh_cn.

--- a/kubejs/assets/createdieselgenerators/lang/zh_cn.json
+++ b/kubejs/assets/createdieselgenerators/lang/zh_cn.json
@@ -1,4 +1,4 @@
 {
-  "item.createdieselgenerators.biodiesel_bucket": "",
-  "fluid.createdieselgenerators.biodiesel": ""
+  "item.createdieselgenerators.biodiesel_bucket": "粗生物柴油桶",
+  "fluid.createdieselgenerators.biodiesel": "粗生物柴油"
 }
