--- a/kubejs/assets/sgjourney/lang/zh_cn.json
+++ b/kubejs/assets/sgjourney/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "block.sgjourney.milky_way_stargate": "",
-  "block.sgjourney.milky_way_ring": "",
-  "block.sgjourney.milky_way_dhd": ""
+  "block.sgjourney.milky_way_stargate": "远古星门",
+  "block.sgjourney.milky_way_ring": "远古星门",
+  "block.sgjourney.milky_way_dhd": "远古DHD"
 }
