--- a/kubejs/assets/minecraft/lang/zh_cn.json
+++ b/kubejs/assets/minecraft/lang/zh_cn.json
@@ -1,4 +1,4 @@
 {
-  "item.minecraft.popped_chorus_fruit": "",
-  "block.minecraft.sponge": ""
+  "item.minecraft.popped_chorus_fruit": "惰性紫颂果",
+  "block.minecraft.sponge": "合成海绵"
 }
