fix(zh-cn): fix some gtceu material names
* 棱镜合金 -> 棱晶合金
* 远古符文 -> 远古符文合金

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -152,7 +152,7 @@
   "material.gtceu.shellite": "壳能",
   "material.gtceu.twinite": "双子物质",
   "material.gtceu.dragonsteel": "龙钢",
-  "material.gtceu.prismalium": "棱镜合金",
+  "material.gtceu.prismalium": "棱光合金",
   "material.gtceu.melodium": "旋律合金",
   "material.gtceu.stellarium": "恒星合金",
   "material.gtceu.sulfur_dichloride": "二氯化硫",
@@ -433,7 +433,7 @@
   "gtceu.runic_inscribe_manipulate": "符文蚀刻与流形操纵",
   "block.gtceu.runic_inscribe_manipulate": "符文叠构蚀刻机",
   "material.gtceu.magnetic_pure_netherite": "磁化纯净下界合金",
-  "material.gtceu.ancient_runicalium": "远古符文",
+  "material.gtceu.ancient_runicalium": "远古符文合金",
   "material.gtceu.sodium_borohydride": "硼氢化钠",
   "material.gtceu.nitrate": "硝酸盐",
   "material.gtceu.bismuth_3_nitrate": "硝酸铋",
