--- a/kubejs/assets/kubejs/lang/zh_hk.json
+++ b/kubejs/assets/kubejs/lang/zh_hk.json
@@ -190,7 +190,7 @@
   "item.kubejs.end_talisman.tooltip": "",
   "item.kubejs.naquadic_netherite_fibers": "",
   "item.kubejs.naquadic_netherite_fibers.tooltip": "",
-  "item.kubejs.coin": "",
+  "item.kubejs.coin": "星際科技幣",
   "item.kubejs.coin.tooltip": "",
   "item.kubejs.multiblock_upgrade_kit": "",
   "item.kubejs.multiblock_upgrade_kit.tooltip": "",
@@ -246,7 +246,7 @@
   "item.kubejs.depleted_highly_enriched_uranium_fuel_rod": "",
   "item.kubejs.depleted_highly_enriched_uranium_fuel_rod.tooltip": "",
   "item.kubejs.depleted_low_enriched_uranium_fuel_rod": "",
-  "item.kubejs.compressed_mycelium": "",
+  "item.kubejs.compressed_mycelium": "壓縮菌絲土",
   "item.kubejs.smoked_mycelium": "",
   "item.kubejs.mycelium_growth": "",
   "item.kubejs.crystalline_akreyrium": "",
@@ -464,56 +464,56 @@
   "item.kubejs.unfired_raw_ceramic_casting_mold": "",
   "item.kubejs.ingot_ceramic_casting_mold": "",
   "item.kubejs.ball_ceramic_casting_mold": "",
-  "block.kubejs.reinforced_stone_bricks": "",
+  "block.kubejs.reinforced_stone_bricks": "強化石磚",
   "block.kubejs.high_steam_machine_casing": "",
-  "block.kubejs.refined_sand": "",
-  "block.kubejs.refined_dust": "",
-  "block.kubejs.crucible_stage_1": "",
-  "block.kubejs.crucible_stage_2": "",
-  "block.kubejs.crucible_stage_3": "",
-  "block.kubejs.crafting_stage_1": "",
-  "block.kubejs.crafting_stage_2": "",
-  "block.kubejs.crafting_stage_3": "",
+  "block.kubejs.refined_sand": "精煉沙粒",
+  "block.kubejs.refined_dust": "精煉塵土",
+  "block.kubejs.crucible_stage_1": "略為中空原木",
+  "block.kubejs.crucible_stage_2": "相當中空原木",
+  "block.kubejs.crucible_stage_3": "幾乎中空原木",
+  "block.kubejs.crafting_stage_1": "成形去皮原木",
+  "block.kubejs.crafting_stage_2": "半雕刻合成台",
+  "block.kubejs.crafting_stage_3": "未清掃合成台",
   "block.kubejs.ancient_stargate_ring_block": "",
   "block.kubejs.ancient_stargate_base_block": "",
   "block.kubejs.ancient_stargate_chevron_block": "",
   "block.kubejs.austenitic_stainless_steel_304_casing": "",
   "block.kubejs.inconel_625_casing": "",
   "block.kubejs.wood_casing": "",
-  "block.kubejs.peek_casing": "",
-  "block.kubejs.fluix_steel_casing": "",
+  "block.kubejs.peek_casing": "聚醚醚機械方塊酮",
+  "block.kubejs.fluix_steel_casing": "福魯伊克斯鋼機械方塊",
   "block.kubejs.superalloy_casing": "",
-  "block.kubejs.enriched_naquadah_machine_casing": "",
-  "block.kubejs.enriched_naquadah_pipe_casing": "",
-  "block.kubejs.enriched_naquadah_gearbox": "",
+  "block.kubejs.enriched_naquadah_machine_casing": "富集矽岩機械方塊",
+  "block.kubejs.enriched_naquadah_pipe_casing": "富集矽岩管道機械方塊",
+  "block.kubejs.enriched_naquadah_gearbox": "富集矽岩齒輪箱機械方塊",
   "block.kubejs.laser_casing": "",
   "block.kubejs.inscribe_casing": "",
   "block.kubejs.core_casing": "",
-  "block.kubejs.meshblock": "",
+  "block.kubejs.meshblock": "防腐木硬化網",
   "block.kubejs.draco_ware_casing": "",
   "block.kubejs.abyssal_inductor_hull": "",
   "block.kubejs.draco_assembly_grating": "",
   "block.kubejs.draco_resilient_fusion_glass": "",
-  "block.kubejs.heart_of_the_flame": "",
+  "block.kubejs.heart_of_the_flame": "§6烈焰之心",
   "block.kubejs.husk_of_the_flame": "",
   "block.kubejs.husk_brick": "",
-  "block.kubejs.cryostone": "",
+  "block.kubejs.cryostone": "冰晶石",
   "block.kubejs.brimstone": "",
   "block.kubejs.void_saturation_sponge": "",
-  "block.kubejs.beryllium_aluminium_alloy_casing": "",
-  "block.kubejs.birmabright_casing": "",
-  "block.kubejs.beryllium_bronze_casing": "",
-  "block.kubejs.blue_steel_casing": "",
-  "block.kubejs.duralumin_casing": "",
-  "block.kubejs.elgiloy_casing": "",
-  "block.kubejs.hydronalium_casing": "",
-  "block.kubejs.kovar_casing": "",
-  "block.kubejs.red_steel_casing": "",
-  "block.kubejs.silicon_bronze_casing": "",
-  "block.kubejs.sterling_silver_casing": "",
+  "block.kubejs.beryllium_aluminium_alloy_casing": "鈹鋁合金機械方塊",
+  "block.kubejs.birmabright_casing": "伯馬布賴特合金機械方塊",
+  "block.kubejs.beryllium_bronze_casing": "鈹合青銅機械方塊",
+  "block.kubejs.blue_steel_casing": "藍鋼機械方塊",
+  "block.kubejs.duralumin_casing": "硬鋁機械方塊",
+  "block.kubejs.elgiloy_casing": "埃爾吉洛伊合金機械方塊",
+  "block.kubejs.hydronalium_casing": "海裝鋁合金機械方塊",
+  "block.kubejs.kovar_casing": "封接合金機械方塊",
+  "block.kubejs.red_steel_casing": "紅鋼機械方塊",
+  "block.kubejs.silicon_bronze_casing": "矽合青銅機械方塊",
+  "block.kubejs.sterling_silver_casing": "紋銀機械方塊",
   "block.kubejs.zamak_casing": "",
-  "block.kubejs.tumbaga_casing": "",
-  "block.kubejs.silicone_rubber_casing": "",
+  "block.kubejs.tumbaga_casing": "圖帕伽機械方塊",
+  "block.kubejs.silicone_rubber_casing": "矽膠機械方塊",
   "block.kubejs.runic_stabilization_casing": "",
   "block.kubejs.runic_transportation_casing": "",
   "block.kubejs.runic_pathway_casing": "",
@@ -529,9 +529,9 @@
   "block.kubejs.noble_mixing_casing": "",
   "block.kubejs.titanic_blasting_casing": "",
   "block.kubejs.quake_proof_casing": "",
-  "block.kubejs.extreme_temperature_smelting_casing": "",
+  "block.kubejs.extreme_temperature_smelting_casing": "極溫冶煉機械方塊",
   "block.kubejs.subzero_casing": "",
-  "block.kubejs.reinforced_cryostone_casing": "",
+  "block.kubejs.reinforced_cryostone_casing": "強化冰晶石機械方塊",
   "block.kubejs.reinforced_brimstone_casing": "",
   "block.kubejs.draneko_casing": "",
   "block.kubejs.abyssal_drill_1": "",
