--- a/kubejs/assets/megacells/lang/zh_hk.json
+++ b/kubejs/assets/megacells/lang/zh_hk.json
@@ -1,4 +1,4 @@
 {
-  "block.megacells.mega_pattern_provider": "",
-  "block.megacells.mega_interface": ""
+  "block.megacells.mega_pattern_provider": "擴大樣品供應器",
+  "block.megacells.mega_interface": "擴大接口"
 }
