--- a/kubejs/assets/minecraft/lang/zh_hk.json
+++ b/kubejs/assets/minecraft/lang/zh_hk.json
@@ -1,4 +1,4 @@
 {
-  "item.minecraft.popped_chorus_fruit": "",
-  "block.minecraft.sponge": ""
+  "item.minecraft.popped_chorus_fruit": "惰性歌萊果",
+  "block.minecraft.sponge": "人造海綿"
 }
