--- a/kubejs/assets/start_core/lang/zh_cn.json
+++ b/kubejs/assets/start_core/lang/zh_cn.json
@@ -5,13 +5,13 @@
   "item.start_core.component_data_core.tooltip": "§7超越认知的数据",
   "item.start_core.component_data_core": "§d组件数据核心",
   "item.start_core.bacteria_dormant.tooltip": "§7唤醒该细菌菌落，利用其潜在的能力",
-  "item.start_core.bacteria_dormant": "§3休眠菌群",
-  "item.start_core.bacteria_bituminimonas_combustilis": "§3可燃沥青菌群",
-  "item.start_core.bacteria_carbanogasibacter_volatilis": "§3挥发碳菌群",
-  "item.start_core.bacteria_fermentibacter_solvatis": "§3溶解发酵菌群",
-  "item.start_core.bacteria_octanivorax_sorbitolens": "§3山梨醇八烷分解菌群",
-  "item.start_core.bacteria_petrospirillum_solvans": "§3溶解石油螺旋菌群",
-  "item.start_core.bacteria_xylotoxibacter_aromatica": "§3焦油木假单胞菌群",
+  "item.start_core.bacteria_dormant": "§3休眠细菌菌落",
+  "item.start_core.bacteria_bituminimonas_combustilis": "§3可燃沥青细菌菌落",
+  "item.start_core.bacteria_carbanogasibacter_volatilis": "§3挥发碳细菌菌落",
+  "item.start_core.bacteria_fermentibacter_solvatis": "§3溶解发酵细菌菌落",
+  "item.start_core.bacteria_octanivorax_sorbitolens": "§3山梨醇八烷分解细菌菌落",
+  "item.start_core.bacteria_petrospirillum_solvans": "§3溶解石油螺旋细菌菌落",
+  "item.start_core.bacteria_xylotoxibacter_aromatica": "§3焦油木假单胞细菌菌落",
   "gtceu.bacterial_breeding_vat": "细菌培养",
   "block.start_core.bacterial_breeding_vat": "细菌培养槽",
   "gtceu.bacterial_runic_mutator": "细菌突变",
@@ -41,24 +41,24 @@
   "behaviour.start_core.bacteria.stat_affinity": "§d与%1$s亲近",
   "behaviour.start_core.bacteria.possible_affinities": "§d菌落亲和性：%1$s§5，%2$s§5，%3$s",
   "behaviour.start_core.bacteria.affinity_none": "无",
-  "behaviour.start_core.bacteria.input": "§7任意属性和亲和力的细菌都可作为原料输入",
-  "behaviour.start_core.bacteria.vat_same_output": "§7繁殖获得的细菌与母体有着相同的属性和亲和力",
-  "behaviour.start_core.bacteria.vat_mutated_output": "§6突变后§7细菌亲和力不变，仅属性改变",
-  "behaviour.start_core.bacteria.mutator_affinity_output": "§6突变后§7细菌类型不变，仅属性和亲和力突变",
-  "behaviour.start_core.bacteria.mutator_total_output": "§6突变后§7细菌类型、属性和亲和力都会突变",
+  "behaviour.start_core.bacteria.input": "§7任意属性和亲和性的细菌都可作为原料输入",
+  "behaviour.start_core.bacteria.vat_same_output": "§7繁殖获得的细菌与母体有着相同的属性和亲和性",
+  "behaviour.start_core.bacteria.vat_mutated_output": "§6突变后§7细菌亲和性不变，仅属性改变",
+  "behaviour.start_core.bacteria.mutator_affinity_output": "§6突变后§7细菌类型不变，仅属性和亲和性突变",
+  "behaviour.start_core.bacteria.mutator_total_output": "§6突变后§7细菌类型、属性和亲和性都会突变",
   "behaviour.start_core.bacteria.mutator_total_output_generic_bacteria": "§3?????细菌菌落",
   "block.start_core.bacteria_multiblock_line": "§3§l细菌殖民地",
   "block.start_core.runic_mutator_description": "§7利用符文时代科技对生物结构进行极端基因改变，使细菌菌落发生突变，从而唤醒休眠菌落或将现有菌落重塑为新型菌落。",
   "block.start_core.breaker_line": "§8-----------------------------------",
   "block.start_core.parallels": "可使用§3并行§r控制仓",
   "block.start_core.rm0": "§e唤醒休眠菌落：",
-  "block.start_core.rm1": "§7将休眠中的菌落重新唤醒为具有随机属性、亲和力和类型的细菌菌落。",
+  "block.start_core.rm1": "§7将休眠中的菌落重新唤醒为具有随机属性、亲和性和类型的细菌菌落。",
   "block.start_core.gap": "",
   "block.start_core.rm3": "§b符文突变：",
-  "block.start_core.rm4": "§7根据所使用的符文石板类型，使细菌菌落的属性、亲和力及类型随机突变。",
+  "block.start_core.rm4": "§7根据所使用的符文石板类型，使细菌菌落的属性、亲和性及类型随机突变。",
   "block.start_core.harvester_description": "§7一台高精度的生物萃取装置，专门处理已唤醒的细菌菌落。它会捕获细菌产出的所有物质，同时持续供养并不断提高其新陈代谢速率，以将产量推向极限。萃取流程的终点为所有细菌的灭绝。",
   "block.start_core.hv0": "§e烃类采集：",
-  "block.start_core.hv1": "§7从细菌菌落中提取主产、副产和次级代谢产物。产物类型取决于细菌的§5亲和力§7。",
+  "block.start_core.hv1": "§7从细菌菌落中提取主产、副产和次级代谢产物。产物类型取决于细菌的§5亲和性§7。",
   "block.start_core.hv3": "§7主产物实际产量等于§f2000mB*细菌的产能等级§7。",
   "block.start_core.hv4": "§7副产物实际产量等于§f1240mB*细菌的产能等级§7。",
   "block.start_core.hv5": "§7次要产物实际产量等于§f320mB*细菌的产能等级§7。",
@@ -66,8 +66,8 @@
   "block.start_core.vat_description": "§7一台专为细菌快速繁殖和进化而设计的专业生化反应堆。在处理单个细菌样本、繁殖菌株的同时，还能产生突变变体，从而兼顾实验或工业应用的稳定性和多样性。",
   "block.start_core.vat1": "§e细菌培养：",
   "block.start_core.vat2": "§7繁殖并突变细菌菌落，可产生大量用于细菌采集或细菌突变的菌落。",
-  "block.start_core.vat3": "§7产出§f16份复制后的§7细菌，其种类、属性和亲和力保持不变。",
-  "block.start_core.vat4": "§7产出§f16份突变后的§7细菌，其种类和亲和力不变，但属性会根据细菌的§f变异等级§7发生突变。",
+  "block.start_core.vat3": "§7产出§f16份复制后的§7细菌，其种类、属性和亲和性保持不变。",
+  "block.start_core.vat4": "§7产出§f16份突变后的§7细菌，其种类和亲和性不变，但属性会根据细菌的§f变异等级§7发生突变。",
   "tab.start_core.creative": "星际科技核心",
   "start_core.machine.auxiliary_boosted_fusion_reactor.description": "§7一台高效核聚变反应堆，利用辅助聚变线圈增强聚变反应，从而提升同时能够运行的反应数量。",
   "start_core.machine.auxiliary_boosted_fusion_reactor.line": "§c§l并行核聚变",
@@ -86,7 +86,7 @@
   "block.start_core.zpm_fusion_reactor": "核聚变反应堆 MK-II",
   "block.start_core.uv_fusion_reactor": "核聚变反应堆 MK-III",
   "block.start_core.uev_fusion_reactor": "核聚变反应堆 MK-IV",
-  "block.start_core.uhv_fusion_reactor": "補助強化型核融合炉 MK I",
+  "block.start_core.uhv_fusion_reactor": "辅助强化型核聚变反应堆 MK-I",
   "block.start_core.uiv_fusion_reactor": "辅助强化型核聚变反应堆 MK-II",
   "block.start_core.advanced_fusion_coil": "进阶聚变线圈方块",
   "start_core.multiblock.uev_fusion_reactor.description": "核聚变反应堆MK-IV是台大型多方块结构，用于融合元素形成更重的元素。它仅可使用UEV等级的能源仓。每个能源仓可增加80MEU的能量缓存，最大能量缓存为1280MEU。",
