--- a/kubejs/assets/start_core/lang/zh_cn.json
+++ b/kubejs/assets/start_core/lang/zh_cn.json
@@ -116,7 +116,7 @@
   "start_core.machine.absolute_parallel_hatch_mk3.tooltip": "允许同时处理至多16个配方。",
   "start_core.machine.absolute_parallel_hatch_energy.tooltip": "§6并行不会额外消耗能量。",
   "block.start_core.uhv_absolute_parallel_hatch": "史诗绝对并行掌控仓",
-  "block.start_core.uev_absolute_parallel_hatch": "巨型绝对平行掌控仓",
+  "block.start_core.uev_absolute_parallel_hatch": "巨型绝对并行掌控仓",
   "block.start_core.uiv_absolute_parallel_hatch": "高级绝对并行掌控仓",
   "block.start_core.enriched_naquadah_drum": "富集硅岩桶",
   "block.start_core.neutronium_drum": "中子素桶",
