fix(zh_cn): unify translation for prismalium
* 棱光合金 -> 海晶 (use translation from thermalendergy mod)

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -152,7 +152,7 @@
   "material.gtceu.shellite": "壳能",
   "material.gtceu.twinite": "双子物质",
   "material.gtceu.dragonsteel": "龙钢",
-  "material.gtceu.prismalium": "棱光合金",
+  "material.gtceu.prismalium": "海晶",
   "material.gtceu.melodium": "旋律合金",
   "material.gtceu.stellarium": "恒星合金",
   "material.gtceu.sulfur_dichloride": "二氯化硫",
