--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -522,7 +522,7 @@
   "block.kubejs.shellite_casing": "超抗性壳能机械方块",
   "block.kubejs.twinite_casing": "双子物质耐弯折机械方块",
   "block.kubejs.dragonsteel_casing": "坚不可摧龙钢机械方块",
-  "block.kubejs.prismalium_casing": "跃迁棱光合金机械方块",
+  "block.kubejs.prismalium_casing": "跃迁海晶机械方块",
   "block.kubejs.melodium_casing": "强化旋律合金机械方块",
   "block.kubejs.stellarium_casing": "结构一体化恒星合金机械方块",
   "block.kubejs.ancient_runicalium_casing": "注入强化型远古符文合金机械方块",
