fix(zh_cn): correct 扎普 -> 鉔普
* Zapolite: 扎普 -> 鉔普

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -234,9 +234,9 @@
   "block.gtceu.large_stone_barrel": "大型石制滚桶",
   "gtceu.large_stone_barrel": "大型石制滚桶",
   "material.gtceu.abydos_titanite_rich_magma": "阿拜多斯富榍石岩浆",
-  "material.gtceu.abydos_zapolite_rich_magma": "阿拜多斯富扎普岩浆",
+  "material.gtceu.abydos_zapolite_rich_magma": "阿拜多斯富鉔普岩浆",
   "material.gtceu.abydos_titanite_poor_magma": "阿拜多斯贫榍石岩浆",
-  "material.gtceu.abydos_zapolite_poor_magma": "阿拜多斯贫扎普岩浆",
+  "material.gtceu.abydos_zapolite_poor_magma": "阿拜多斯贫鉔普岩浆",
   "material.gtceu.zapolgium_diiodide_oxide": "二碘化氧化鉔",
   "material.gtceu.austenitic_stainless_steel_304": "奥氏体不锈钢-304",
   "material.gtceu.inconel_625": "英科耐尔-625",
@@ -381,7 +381,7 @@
   "block.gtceu.large_rock_crusher": "大型碎岩机",
   "block.gtceu.solid_blast_furnace": "坚固高炉",
   "gtceu.solid_blast_furnace": "坚固高炉",
-  "gtceu.jei.ore_vein.zapolite_vein": "阿拜多斯扎普矿脉",
+  "gtceu.jei.ore_vein.zapolite_vein": "阿拜多斯鉔普矿脉",
   "gtceu.jei.ore_vein.lautarite_vein": "阿拜多斯碘酸钙矿脉",
   "gtceu.jei.ore_vein.clausthalite_vein": "阿拜多斯硒铅矿矿脉",
   "gtceu.jei.ore_vein.brimstone_patch": "下界硫磺矿区",
@@ -1022,7 +1022,7 @@
   "gtceu.jei.bedrock_fluid.debris_rich_nether_magma_deposit": "富残骸下界岩浆渣",
   "gtceu.jei.bedrock_fluid.abydos_titanite_poor_magma_deposit": "阿拜多斯贫榍石岩浆渣",
   "gtceu.jei.bedrock_fluid.gritty_akreyrium": "粗弧光渣",
-  "gtceu.jei.bedrock_fluid.abydos_zapolite_poor_magma_deposit": "阿拜多斯贫扎普岩浆渣",
+  "gtceu.jei.bedrock_fluid.abydos_zapolite_poor_magma_deposit": "阿拜多斯贫鉔普岩浆渣",
   "gtceu.jei.bedrock_fluid.highly_unstable_nether_magma_deposit": "高度不稳定下界岩浆渣",
   "gtceu.jei.bedrock_fluid.crude_infernal_concentrate": "粗炼狱浓缩液渣",
   "gtceu.jei.bendrock_fluid.lava_dense": "熔岩渣",
