fix(zh_cn): correct 含氧矿物混合液
* 含氧矿物混合物 -> 含氧矿物混合液 (is liquid)

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -478,7 +478,7 @@
   "material.gtceu.raw_ore_slurry": "粗矿浆液",
   "material.gtceu.mixed_mineral_residue": "混合矿物残液",
   "material.gtceu.sulfuric_mineral_mixture": "硫酸矿物混合液",
-  "material.gtceu.oxygenous_mineral_mixture": "含氧矿物混合物",
+  "material.gtceu.oxygenous_mineral_mixture": "含氧矿物混合液",
   "material.gtceu.molten_ore_mixture": "熔融矿物混合液",
   "material.gtceu.molten_bauxite_ore": "熔融铝土矿",
   "material.gtceu.molten_pitchblende_ore": "熔融沥青铀矿",
