fix(zh_cn): unify 矿物 -> 矿石

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -48,14 +48,14 @@
   "block.gtceu.super_pressure_heat_chamber.tooltip.1": "可使用§3并行§r控制仓且支持§c亚时间刻并行§r",
   "block.gtceu.nuclear_reactor.tooltip.0": "§7一台中型反应堆，可进行相对简单的核反应并以此制造极其有用的材料。",
   "block.gtceu.nuclear_reactor.tooltip.1": "可使用§3并行§r控制仓",
-  "block.gtceu.primitive_ore_factory.tooltip.0": "§7你的第一台一体化矿物处理机器。",
-  "block.gtceu.steam_ore_factory.tooltip.0": "§7一台稍微先进些的矿物处理机器，可接受来自总线和仓口的输入，并以此实现自动化。",
-  "block.gtceu.electric_ore_factory.tooltip.0": "§7电力驱动的一体化矿物处理机器。",
+  "block.gtceu.primitive_ore_factory.tooltip.0": "§7你的第一台一体化矿石处理机器。",
+  "block.gtceu.steam_ore_factory.tooltip.0": "§7一台稍微先进些的矿石处理机器，可接受来自总线和仓口的输入，并以此实现自动化。",
+  "block.gtceu.electric_ore_factory.tooltip.0": "§7电力驱动的一体化矿石处理机器。",
   "block.gtceu.ore_processing_plant.tooltip.0": "§7新一代的矿石处理机器，其吞吐量远超上一代。",
   "block.gtceu.ore_processing_plant.tooltip.1": "可使用§3并行§r控制仓",
-  "block.gtceu.bulk_ore_processing_array": "批量矿物处理阵列",
-  "gtceu.bulk_ore_processing_array": "批量矿物处理",
-  "block.gtceu.bulk_ore_processing_array.tooltip.0": "§7§4终级§7的矿物处理机器，其能力远远超过之前所有的机器。",
+  "block.gtceu.bulk_ore_processing_array": "批量矿石处理阵列",
+  "gtceu.bulk_ore_processing_array": "批量矿石处理",
+  "block.gtceu.bulk_ore_processing_array.tooltip.0": "§7§4终级§7的矿石处理机器，其能力远远超过之前所有的机器。",
   "block.gtceu.bulk_ore_processing_array.tooltip.1": "可使用§3并行§r控制仓，支持§c亚时间刻并行§r，§2批量制作§r和§b吞吐量提升",
   "block.gtceu.industrial_barrel": "工业滚桶",
   "gtceu.industrial_barrel_aqueous": "工业滚桶-液相",
@@ -208,7 +208,7 @@
   "gtceu.essence_replication": "精华复制",
   "gtceu.greenhouse_growing": "神秘温室种植",
   "block.gtceu.primitive_ore_factory": "原始矿石处理厂",
-  "gtceu.primitive_ore_processing": "原始矿物处理",
+  "gtceu.primitive_ore_processing": "原始矿石处理",
   "block.gtceu.large_barrel": "大型滚桶",
   "gtceu.large_barrel": "滚桶转化",
   "material.gtceu.echo_r": "回响流体",
@@ -229,8 +229,8 @@
   "gtceu.quantum_compressor_extraction": "量子压缩机提取",
   "block.gtceu.runic_circuitry_assembling_station": "符文电路组装站",
   "gtceu.runic_circuitry_assembling_station": "符文电路组装站",
-  "block.gtceu.electric_ore_factory": "电力矿物工厂",
-  "gtceu.electric_ore_processing": "矿物处理",
+  "block.gtceu.electric_ore_factory": "电力矿石工厂",
+  "gtceu.electric_ore_processing": "矿石处理",
   "block.gtceu.large_stone_barrel": "大型石制滚桶",
   "gtceu.large_stone_barrel": "大型石制滚桶",
   "material.gtceu.abydos_titanite_rich_magma": "阿拜多斯富榍石岩浆",
@@ -305,8 +305,8 @@
   "block.gtceu.large_farm": "大型农场",
   "gtceu.large_sieve": "大型筛子",
   "block.gtceu.large_sieve": "大型筛子",
-  "gtceu.plant_ore_processing": "矿物处理",
-  "block.gtceu.ore_processing_plant": "矿物处理总工厂",
+  "gtceu.plant_ore_processing": "矿石处理",
+  "block.gtceu.ore_processing_plant": "矿石处理总工厂",
   "material.gtceu.npk_solution": "氮磷钾溶液",
   "material.gtceu.calamatium": "灾厄",
   "material.gtceu.isovol": "等体素",
@@ -476,10 +476,10 @@
   "material.gtceu.quartz_mixture": "富石英混合物",
   "material.gtceu.rare_ore_residue": "稀有矿残液",
   "material.gtceu.raw_ore_slurry": "粗矿浆液",
-  "material.gtceu.mixed_mineral_residue": "混合矿物残液",
-  "material.gtceu.sulfuric_mineral_mixture": "硫酸矿物混合液",
-  "material.gtceu.oxygenous_mineral_mixture": "含氧矿物混合液",
-  "material.gtceu.molten_ore_mixture": "熔融矿物混合液",
+  "material.gtceu.mixed_mineral_residue": "混合矿石残液",
+  "material.gtceu.sulfuric_mineral_mixture": "硫酸矿石混合液",
+  "material.gtceu.oxygenous_mineral_mixture": "含氧矿石混合液",
+  "material.gtceu.molten_ore_mixture": "熔融矿石混合液",
   "material.gtceu.molten_bauxite_ore": "熔融铝土矿",
   "material.gtceu.molten_pitchblende_ore": "熔融沥青铀矿",
   "material.gtceu.molten_molybdenite_ore": "熔融辉钼矿",
@@ -524,8 +524,8 @@
   "material.gtceu.boron_trioxide": "三氧化硼",
   "material.gtceu.astrenalloy_nx": "哈斯特洛依合金 NX",
   "material.gtceu.thacoloy_nq_42x": "铊铬合金 NQ-42X",
-  "gtceu.steam_ore_processing": "蒸汽矿物处理",
-  "block.gtceu.steam_ore_factory": "蒸汽矿物工厂",
+  "gtceu.steam_ore_processing": "蒸汽矿石处理",
+  "block.gtceu.steam_ore_factory": "蒸汽矿石工厂",
   "material.gtceu.enriched_estalt": "富集§c§o埃斯塔尔特§r",
   "material.gtceu.estalt": "§c埃斯塔尔特§r",
   "material.gtceu.sodium_over_sculk": "幽匿钠",
@@ -938,7 +938,7 @@
   "material.gtceu.molten_waste": "熔融废液",
   "material.gtceu.cooled_molten_waste": "冷却熔融废料",
   "material.gtceu.impure_molten_ore_mixture": "不纯熔融矿石混合液",
-  "material.gtceu.pure_molten_ore_mixture": "纯净熔融矿物混合液",
+  "material.gtceu.pure_molten_ore_mixture": "纯净熔融矿石混合液",
   "material.gtceu.cooled_molten_bauxite_ore": "冷却熔融铝土矿",
   "material.gtceu.cooled_molten_pitchblende_ore": "冷却熔融沥青铀矿",
   "material.gtceu.cooled_molten_molybdenite_ore": "冷却熔融辉钼矿",
@@ -1113,8 +1113,8 @@
   "block.gtceu.super_cutter.tooltip.0": "§7一种更大型的切割机，可以同时处理更多材料。",
   "block.gtceu.super_cutter.tooltip.1": "只允许有§b一个§r能源仓",
   "block.gtceu.super_cutter.tooltip.2": "支持§b吞吐量提升§r",
-  "block.gtceu.super_electric_ore_factory": "矿物处理厂",
-  "block.gtceu.super_electric_ore_factory.tooltip.0": "§7一座已被推至性能极限的电力矿物工厂。",
+  "block.gtceu.super_electric_ore_factory": "矿石处理厂",
+  "block.gtceu.super_electric_ore_factory.tooltip.0": "§7一座已被推至性能极限的电力矿石工厂。",
   "block.gtceu.super_electric_ore_factory.tooltip.1": "只允许有§b一个§r能源仓",
   "block.gtceu.super_electric_ore_factory.tooltip.2": "支持§b吞吐量提升§r和§c亚时间刻并行",
   "block.gtceu.atomic_synthesis_plant": "原子合成工厂",
@@ -1179,7 +1179,7 @@
   "block.gtceu.material_annihilation_array.tooltip.0": "§3§l多线程解构器",
   "block.gtceu.material_annihilation_array.tooltip.1": "§7一个将物质粉碎后重新精调的阵列，可将大量物质汽化成基本颗粒云，再在极端条件下进行重构。",
   "block.gtceu.material_annihilation_array.tooltip.2": "§8-----------------------------------",
-  "block.gtceu.material_annihilation_array.tooltip.3": "§7可用配方类型：§f批量矿物处理§7，§f电弧炉§7，§f研磨机",
+  "block.gtceu.material_annihilation_array.tooltip.3": "§7可用配方类型：§f批量矿石处理§7，§f电弧炉§7，§f研磨机",
   "block.gtceu.material_annihilation_array.tooltip.4": "可使用§3并行§r控制仓，支持§5多线程§f，§2批量制作§r和§c亚时间刻并行",
   "block.gtceu.molecular_inducing_xanadu": "分子诱导幻境",
   "block.gtceu.molecular_inducing_xanadu.tooltip.0": "§3§l多线程搅拌机",
