fix(zh_cn): correct 不纯 -> 含杂

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -310,8 +310,8 @@
   "material.gtceu.npk_solution": "氮磷钾溶液",
   "material.gtceu.calamatium": "灾厄",
   "material.gtceu.isovol": "等体素",
-  "material.gtceu.impure_calamatium_solution": "不纯灾厄溶液",
-  "material.gtceu.impure_isovol_solution": "不纯等体素溶液",
+  "material.gtceu.impure_calamatium_solution": "含杂灾厄溶液",
+  "material.gtceu.impure_isovol_solution": "含杂等体素溶液",
   "material.gtceu.calamatium_solution": "灾厄溶液",
   "material.gtceu.isovol_solution": "等体素溶液",
   "material.gtceu.calamatium_fluoride": "氟化灾厄",
@@ -937,7 +937,7 @@
   "material.gtceu.rich_mixture_drilling_formula": "富混合物钻井液",
   "material.gtceu.molten_waste": "熔融废液",
   "material.gtceu.cooled_molten_waste": "冷却熔融废料",
-  "material.gtceu.impure_molten_ore_mixture": "不纯熔融矿石混合液",
+  "material.gtceu.impure_molten_ore_mixture": "含杂熔融矿石混合液",
   "material.gtceu.pure_molten_ore_mixture": "纯净熔融矿石混合液",
   "material.gtceu.cooled_molten_bauxite_ore": "冷却熔融铝土矿",
   "material.gtceu.cooled_molten_pitchblende_ore": "冷却熔融沥青铀矿",
@@ -982,7 +982,7 @@
   "material.gtceu.rhodium_iii_hydroxide": "氢氧化铑(III)",
   "material.gtceu.rhodium_iii_oxide": "三氧化铑",
   "material.gtceu.ruthenium_complex": "钌络合物",
-  "material.gtceu.impure_ruthenium": "不纯钌",
+  "material.gtceu.impure_ruthenium": "含杂钌",
   "material.gtceu.rarest_metal_slurry": "稀有金属浆液",
   "material.gtceu.sodium_osmate": "锇酸钠",
   "material.gtceu.osmium_iv_hydroxide": "四氢氧化锇",
