--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -264,7 +264,7 @@
   "item.kubejs.earth_infused_shard": "§8地岩§r注能碎片",
   "item.kubejs.lightning_infused_shard": "§e雷霆§r注能碎片",
   "item.kubejs.star_casting_mold": "模具（星）",
-  "item.kubejs.impure_nether_star": "不纯下界之星",
+  "item.kubejs.impure_nether_star": "含杂下界之星",
   "item.kubejs.nether_star_shard": "下界之星碎片",
   "item.kubejs.energized_nether_star_shard": "充能下界之星碎片",
   "item.kubejs.nether_tempered_shard": "下界强化星之碎片",
