fix(zh_cn): Change 耗尽的 to 枯竭

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -242,10 +242,10 @@
   "item.kubejs.highly_enriched_uranium_fuel_rod": "高富集铀燃料棒",
   "item.kubejs.highly_enriched_uranium_fuel_rod.tooltip": "§2200亿卡路里",
   "item.kubejs.low_enriched_uranium_fuel_rod": "低富集铀燃料棒",
-  "item.kubejs.depleted_thorium_fuel_rod": "耗尽的钍燃料棒",
-  "item.kubejs.depleted_highly_enriched_uranium_fuel_rod": "耗尽的高富集铀燃料棒",
+  "item.kubejs.depleted_thorium_fuel_rod": "枯竭钍燃料棒",
+  "item.kubejs.depleted_highly_enriched_uranium_fuel_rod": "枯竭高富集铀燃料棒",
   "item.kubejs.depleted_highly_enriched_uranium_fuel_rod.tooltip": "§7不再含有200亿卡路里",
-  "item.kubejs.depleted_low_enriched_uranium_fuel_rod": "耗尽的低富集铀燃料棒",
+  "item.kubejs.depleted_low_enriched_uranium_fuel_rod": "枯竭低富集铀燃料棒",
   "item.kubejs.compressed_mycelium": "压缩菌丝体",
   "item.kubejs.smoked_mycelium": "烟熏菌丝体",
   "item.kubejs.mycelium_growth": "增生菌丝",
